<resources>
    <string name="app_name">TestVideoEdit</string>

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>


    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="play_error">Unable to play this media file</string>
</resources>
