<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.VideoEditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/color_selector_click_translucent_white"
                    android:onClick="onHome">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_re"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        />
                </RelativeLayout>
                <TextView
                    android:id="@+id/tv_toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:text="视频编辑"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
        <RelativeLayout
            android:id="@+id/video_view"
            android:layout_width="match_parent"
            android:layout_height="300dp">
        </RelativeLayout>
        <TextView
            android:id="@+id/info"
            android:nextFocusUp="@+id/endmarker"
            android:nextFocusDown="@+id/play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/AudioFileInfoOverlayText"
            android:gravity="center" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp">

            <!--ImageView
             android:id="@+id/bkgnd"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:scaleType="centerCrop"
             android:src="@drawable/bkgnd"-->

            <com.hm.videoedit.view.WaveformView
                android:id="@+id/waveform"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <com.hm.videoedit.view.MarkerView
                android:id="@+id/startmarker"
                android:nextFocusDown="@+id/endmarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/marker_left"
                android:contentDescription="@string/start_marker" />

            <com.hm.videoedit.view.MarkerView
                android:id="@+id/endmarker"
                android:nextFocusUp="@+id/startmarker"
                android:nextFocusDown="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/marker_right"
                android:contentDescription="@string/end_marker" />

        </RelativeLayout>

        <LinearLayout
            style="@style/ToolbarBackground"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:gravity="center" >

            <ImageButton
                android:id="@+id/rew"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                style="@android:style/MediaButton"
                android:contentDescription="@string/rewind"
                android:src="@android:drawable/ic_media_previous" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="71dip"
                android:layout_height="52dip"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                style="@android:style/MediaButton"
                android:contentDescription="@string/play"
                android:src="@android:drawable/ic_media_play" />

            <ImageButton
                android:id="@+id/ffwd"
                android:layout_width="64dip"
                android:layout_height="52dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="6dip"
                android:layout_marginBottom="6dip"
                style="@android:style/MediaButton"
                android:contentDescription="@string/ffwd"
                android:src="@android:drawable/ic_media_next" />

        </LinearLayout>

        <LinearLayout style="@style/HorizontalDividerTop" />
        <LinearLayout style="@style/HorizontalDividerBottom" />

        <LinearLayout
            style="@style/ToolbarBackground"
            android:layout_width="fill_parent"
            android:layout_height="62dip"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mark_start"
                android:text="@string/start_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:labelFor="@+id/starttext"
                android:clickable="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="31dip" />

            <TextView
                android:id="@+id/starttext"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="30dip"
                android:layout_width="70dip"
                android:layout_height="31dip"
                android:gravity="center" />

            <TextView
                android:id="@+id/mark_end"
                android:text="@string/end_label"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:labelFor="@+id/endtext"
                android:clickable="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="31dip" />

            <TextView
                android:id="@+id/endtext"
                android:textColor="#ffffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_width="70dip"
                android:layout_height="31dip"
                android:layout_marginLeft="10dip"
                android:gravity="center" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@android:color/white"
            android:text="确定"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:background="@drawable/radius_confirm"
            android:onClick="onConfirm"
            />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
